crates/probe-tui/tests/snapshots/probe_tui__probe_tui_approval_overlay.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---




           ┌─ Approval ─────────────────────────────────────────────┐
           │ tool: apply_patch                                      │
           │ call: call_patch_1                                     │
           │ risk: write                                            │
           │ requested_turn: 1                                      │
           │ paused_turn: 2                                         │
           │ reason: tool `apply_patch` requires write approval     │
           │                                                        │
           │ arguments_summary                                      │
           │   {                                                    │
           │     "new_text_chars": 5,                               │
           │     "old_text_chars": 5,                               │
           │     "path": "hello.txt"                                │
           │   }                                                    │
           │                                                        │
           └────────────────────────────────────────────────────────┘
