crates/probe-tui/tests/snapshots/probe_tui__probe_tui_completed_state.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---



           ┌─ Setup ────────────────────────────────────────────────┐
           │ Last completed call: Next Step                         │
           │                                                        │
           │ Response                                               │
           │ The TUI should now prove live Apple FM setup truth on  │
           │ startup.                                               │
           │                                                        │
           │ response_id: resp-3                                    │
           │ model: apple-foundation-model                          │
           └────────────────────────────────────────────────────────┘




┌──────────────────────────────────────────────────────────────────────────────┐
│ status: opened setup overlay | Tab | Ctrl+R/S/A/O | Up/Down | F1 | Ctrl+C    │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Composer (disabled) ────────────────────────────────────────────────────────┐
│ Composer disabled while setup owns focus. Esc returns to chat.               │
└──────────────────────────────────────────────────────────────────────────────┘
