crates/probe-tui/tests/snapshots/probe_tui__probe_tui_help_modal.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---




           ┌─ Help ─────────────────────────────────────────────────┐
           │ Probe Chat Shell Keys                                  │
           │                                                        │
           │ Enter / Ctrl+J      submit / newline                   │
           │ Up / Down           draft history recall               │
           │ Mouse wheel / PgUp  scroll active panel                │
           │ PgDn                scroll back toward latest          │
           │ Ctrl+O              add attachment placeholder         │
           │ Ctrl+R / Ctrl+S     backend check / backend overlay    │
           │ Ctrl+A              approval                           │
           │ Ctrl+T              toggle operator notes              │
           │ F1 / Esc            toggle or dismiss help             │
           └────────────────────────────────────────────────────────┘




┌───────────────────────────locked | plain | qwen3.5-2b-q8_0-registry... | idle┐
│ Input disabled while help owns focus. Esc or F1 returns to chat.             │
└──────────────────────────────────────────────────────────────────────────────┘
