crates/probe-tui/tests/snapshots/probe_tui__probe_tui_initial.snap
---
source: crates/probe-tui/tests/probe_tui.rs
assertion_line: 44
expression: snapshot
---





















┌───────────────────────────────────────────── qwen3.5-2b-q8_0-registry... · . ┐
│ Type a Probe message. Plain Enter sends. Shift+Enter inserts a newline.      │
└──────────────────────────────────────────────────────────────────────────────┘
