crates/probe-tui/tests/snapshots/probe_tui__probe_tui_running_state.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---



           ┌─ Setup ────────────────────────────────────────────────┐
           │ Running call 1/3: Sanity Check                         │
           │                                                        │
           │ Prompt                                                 │
           │ Reply with exactly READY.                              │
           │                                                        │
           │ Response                                               │
           │ [waiting for Apple FM reply]                           │
           │                                                        │
           └────────────────────────────────────────────────────────┘




┌──────────────────────────────────────────────────────────────────────────────┐
│ status: opened setup overlay | backend: pending | phase: idle | Tab |        │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Composer (disabled) ────────────────────────────────────────────────────────┐
│ Composer disabled while setup owns focus. Esc returns to chat.               │
└──────────────────────────────────────────────────────────────────────────────┘
