crates/probe-tui/tests/snapshots/probe_tui__probe_tui_setup_overlay.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---



           ┌─ Backend ──────────────────────────────────────────────┐
           │ Probe setup surface is ready.                          │
           │                                                        │
           │ Press Ctrl+R to start or rerun the Apple FM setup      │
           │ flow.                                                  │
           │                                                        │
           │ Backend Status                                         │
           │   phase: idle                                          │
           │   calls_done: 0                                        │
           └────────────────────────────────────────────────────────┘




┌──────────────────────────────────────────────────────────────────────────────┐
│ status: opened backend overlay | backend: apple_fm_bridge | target:          │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Composer (disabled) ────────────────────────────────────────────────────────┐
│ Composer disabled while backend overlay owns focus. Esc returns to chat.     │
└──────────────────────────────────────────────────────────────────────────────┘
