crates/probe-tui/tests/snapshots/probe_tui__probe_tui_transcript_committed_turn.snap
---
source: crates/probe-tui/tests/probe_tui.rs
assertion_line: 363
expression: snapshot
---
┌──────────────────────────────────────────────────────────────────────────────┐
│  Codex │ Qwen │ Apple FM                                                     │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Transcript ─────────────────────────────────────────────────────────────────┐
│   result: read README.md:1-3                                                 │
│   turn: 2                                                                    │
│   policy: auto_allow                                                         │
│   risk: read_only                                                            │
│   approval: not_required                                                     │
│                                                                              │
│ [assistant] Probe                                                            │
│   Probe owns the coding-agent runtime: sessions, transcripts, tools,         │
│ approvals, and CLI/TUI surfaces.                                             │
└──────────────────────────────────────────────────────────────────────────────┘

┌──────────────────────────────────────────────────────────────────────────────┐
│ status: committed assistant row | backend: openai_chat_completions | target: │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Composer ───────────────────────────────────────────────────────────────────┐
│ cmd: plain                                                                   │
│ Type a Probe message. Enter submits. Ctrl+J inserts a newline.               │
└──────────────────────────────────────────────────────────────────────────────┘
