crates/probe-tui/tests/snapshots/probe_tui__probe_tui_transcript_running_turn.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---
› Summarize what Probe owns.

• Calling read_file
  └ README.md

















┌───────────────────────────────────── plain · qwen3.5-2b-q8_0-registry... · . ┐
│ Type a Probe message. Enter submits. Newline: Shift+Enter · or Ctrl+Enter /  │
└──────────────────────────────────────────────────────────────────────────────┘
