crates/probe-tui/tests/snapshots/probe_tui__probe_tui_transcript_streaming_delta_turn.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Chat │ Events                                                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

┌─ Transcript ─────────────────────────────────────────────────────────────────────────────────────┐
│ [user] You                                                                                       │
│   Inspect README and summarize Probe.                                                            │
│                                                                                                  │
│ [active assistant] Assistant Stream                                                              │
│   round_trip: 1                                                                                  │
│   response_id: chatcmpl_stream_delta_1                                                           │
│   model: qwen3.5-2b-q8_0-registry.gguf                                                           │
│   mode: delta                                                                                    │
│   backend: openai_chat_completions                                                               │
│   ttft_ms: 73                                                                                    │
│   response                                                                                       │
│   Probe owns the coding-agent runtime, including sessions, tools, approvals, and transcripts.    │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ status: assistant delta appended for round 1 | backend: openai_chat_completions | target:        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

┌─ Composer ───────────────────────────────────────────────────────────────────────────────────────┐
│ cmd: plain                                                                                       │
│ Type a Probe message. Enter submits. Ctrl+J inserts a newline.                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
