crates/probe-tui/tests/snapshots/probe_tui__probe_tui_transcript_streaming_snapshot_turn.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---
[user] You
  Reply with the next honest proof target.

[active assistant] Probe
  Stream remote Qwen tokens into the retained transcript.




















┌────────────────────────────────────────────────────────────── plain | apple-foundation-model | * ┐
│ Type a Probe message. Enter submits. Shift+Enter inserts a newline.                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
