crates/probe-tui/tests/snapshots/probe_tui__probe_tui_unavailable_state.snap
---
source: crates/probe-tui/tests/probe_tui.rs
expression: snapshot
---
┌──────────────────────────────────────────────────────────────────────────────┐
│  Chat │ Events                                                               │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Transcript ───────────────────────────────────────────────┐ ┌─ Shell ───────┐
│ [status] Availability Unavailable                          │ │ focus: chat   │
│   reason: model_not_ready                                  │ │ stack: 1      │
│   Probe stopped before issuing any inference call.         │ │ turns: 1      │
│                                                            │ │ active: none  │
│                                                            │ │ session: pend │
│                                                            │ │ runtime: pend │
│                                                            │ │ model: pendin │
│                                                            │ │ phase: pendin │
│                                                            │ └───────────────┘
└────────────────────────────────────────────────────────────┘

┌──────────────────────────────────────────────────────────────────────────────┐
│ status: Apple FM unavailable | Tab | Ctrl+R/S/A/O | Up/Down | F1 | Ctrl+C    │
└──────────────────────────────────────────────────────────────────────────────┘

┌─ Composer ───────────────────────────────────────────────────────────────────┐
│ cmd: plain                                                                   │
│ Type a Probe message. Enter submits. Ctrl+J inserts a newline.               │
└──────────────────────────────────────────────────────────────────────────────┘
